[package]
name = "mtr"
version = "0.3.0"
edition = "2021"

[build-dependencies]
convert_case = "0.6.0"
prettyplease = "0.2.10"
proc-macro2 = "1.0.63"
quote = "1.0.29"
rand = "0.8.5"
syn = "2.0.23"

[dependencies]
anyhow = "1.0.75"
ben = { git = "https://github.com/rana/ben.git", version = "0.3.0" }
clap = { version = "4.3.19", features = ["derive"] }
comfy-table = "7.0.1"
itertools = "0.11.0"
itr = { git = "https://github.com/rana/itr.git", version = "0.1.0" }
once_cell = "1.18.0"
rand = "0.8.5"
threadpool = "1.8.1"
